// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Table Default Table 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c1:hover {
  background: #F5F5F5;
}

.c3 {
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  role="table"
>
  <div
    className="c0"
    role="rowgroup"
  >
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c3"
      >
        <div
          className="c4"
          role="columnheader"
        >
          Header 1
        </div>
        <div
          className="c4"
          role="columnheader"
        >
          Header 2
        </div>
        <div
          className="c4"
          role="columnheader"
        >
          Header 3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Table Table Expanded 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c4 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: NaNpx NaNpx;
  background-color: #FFFFFF;
  color: #0046FF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c4,
.c4[type='button'],
.c4[type='reset'],
.c4[type='submit'] {
  -webkit-appearance: button;
}

.c4::-moz-focus-inner,
.c4[type='button']::-moz-focus-inner,
.c4[type='reset']::-moz-focus-inner,
.c4[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c4:-moz-focusring,
.c4[type='button']:-moz-focusring,
.c4[type='reset']:-moz-focusring,
.c4[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c4::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid #0046FF;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c4:hover {
  color: hsl(223.5,100%,40%);
}

.c4:hover::before {
  border-color: hsl(223.5,100%,40%);
}

.c4:active {
  color: hsl(223.5,100%,35%);
}

.c4:active::before {
  border-color: hsl(223.5,100%,35%);
}

.c1 {
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c1:hover {
  background: #F5F5F5;
}

.c3 {
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  role="table"
>
  <div
    className="c0"
    role="rowgroup"
  >
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c3"
      >
        Default
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c3"
      >
        <button
          className="NormalizedButton__Button-ey7f5x-0 c4"
          onClick={[Function]}
          type="button"
        >
          <span>
            <span
              className="c5"
            >
              Expand
            </span>
          </span>
        </button>
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c3"
      >
        Default
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c3"
      >
        Default
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Table Table Header 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  box-sizing: border-box;
  -webkit-flex: 3;
  -ms-flex: 3;
  flex: 3;
}

.c1 {
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c1:hover {
  background: #F5F5F5;
}

.c3 {
  padding-top: 4px;
  padding-bottom: 4px;
}

<div
  role="table"
>
  <div
    className="c0"
    role="rowgroup"
  >
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c3"
      >
        <div
          className="c4"
          role="columnheader"
        >
          Table header 1
        </div>
        <div
          className="c5"
          role="columnheader"
        >
          Table header 2
        </div>
        <div
          className="c4"
          role="columnheader"
        >
          Table header 3
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules | Table Table With Different Rows 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  border-bottom: 1px solid #EBEBE8;
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c1:hover {
  background: #F5F5F5;
}

.c4 {
  padding-right: 8px;
  padding-left: 6px;
  border-left: 2px solid transparent;
}

.c4:hover {
  background: #F5F5F5;
}

.c3 {
  padding-top: 4px;
  padding-bottom: 4px;
}

.c5 {
  padding-top: 8px;
  padding-bottom: 8px;
}

.c6 {
  padding-top: 0px;
  padding-bottom: 0px;
}

<div
  role="table"
>
  <div
    className="c0"
    role="rowgroup"
  >
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c3"
      >
        Default
      </div>
    </div>
    <div
      className="c4"
      role="row"
    >
      <div
        className="c2 c3"
      >
        Border bottom hidden
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c5"
      >
        Large
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c3"
      >
        Medium
      </div>
    </div>
    <div
      className="c1"
      role="row"
    >
      <div
        className="c2 c6"
      >
        Small
      </div>
    </div>
  </div>
</div>
`;
